# actions-src

./: .cspell.json  .envrc  .gitignore  .ruff.toml  404.html  CHANGELOG.md  Makefile  README.md  bunup.config.ts  index.html  mkdocs.yaml  objects.inv  package.json  pyproject.toml  sitemap.xml  tsconfig.json
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  .copier-answers.typescript.yaml  mkdocs.yaml
.config/mise/: config.dev.toml
.config/release-please/: .manifest.json
.github/copier/: .copier-answers.python.yaml  .copier-answers.share.yaml  mkdocs.yaml
.github/workflows/: bot-auto-merge.yaml  bot-copier-update.yaml  bot-schedule.yaml  (+12 more)
SUMMARY/: index.html
app-list-repos/: action.yaml
approve/: README.md  action.yaml  main.sh
auth/: action.yaml
auth-app/: README.md  action.yaml
auto-merge/: README.md  action.yaml  main.sh
auto-review/: action.yaml
changelog/: action.yaml  cliff.toml
commit/: action.yaml
copier-update/: action.yaml  main.sh
delete-cancelled-runs/: README.md  action.yaml
install/: README.md  action.yaml
label-pr/: action.yaml  main.sh
lib/: error.ts  index.ts  main.ts
mega-linter/: .mega-linter.yaml  action.yaml
pr-label/: action.yaml  main.sh
pr-review/: action.yaml  main.sh
release/: README.md  action.yaml  changelog.json  cliff.toml
review-pr/: action.yaml
ruleset-import/: action.yaml
scripts/: build.ts  gen-init.sh  secret-set.py  secret-set.sh
search/: search_index.json
semver-parse/: action.yaml  main.py
setup-pages/: action.yaml  main.py
setup-python/: action.yaml
skip-duplicate/: action.yaml
template/: action.yaml
(+114 files in other folders)
