[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
build = [
  "build>=1.2.2.post1,<2",
  "check-wheel-contents>=0.6.1,<0.7",
  "twine>=6.1.0,<7",
]
dev = ["icecream>=2.1.3,<3"]

[project]
dependencies = [
  "environs>=14.1.0,<15",
  "githubkit[auth-app]>=0.12.5,<0.13",
  "httpx>=0.28.1,<0.29",
  "lazy-loader>=0.4,<0.5",
  "liblaf-grapes>=0.0.1",
  "loguru>=0.7.2,<0.8",
  "pydantic-settings>=2.7.1,<3",
  "pydantic>=2.9.2,<3",
  "rich>=13.9.2,<14",
  "tenacity>=9.0.0,<10",
]
description = "Add your description here"
name = "liblaf-actions"
readme = "docs/README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.scripts]
auto-review = "liblaf.actions.actions.auto_review:main"
release = "liblaf.actions.actions.release:main"
schedule = "liblaf.actions.actions.schedule:main"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.uv]
default-groups = ["build", "dev"]
